Fix gradient flickering/glitching during scroll
Added backface-visibility and perspective CSS fixes to prevent white pixels
and glitching when scrolling. Also set body background-color as fallback.

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #0A0A0A;
+}
+
+/* Fix for gradient flickering during scroll */
+* {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
 }
 
 code {
